@@ -1936,8 +1936,7 @@ def broken_barh(xranges, yrange, hold=None, **kwargs):
 # This function was autogenerated by boilerplate.py.  Do not edit as
 # changes will be lost
 @autogen_docstring(Axes.boxplot)
-def boxplot(x, notch=0, sym='b+', vert=1, whis=1.5, positions=None, widths=None,
-            hold=None, patch_artist=False):
+def boxplot(x, notch=0, sym='b+', vert=1, whis=1.5, positions=None, widths=None, patch_artist=False, bootstrap=None, hold=None):
     ax = gca()
     # allow callers to override the hold state by passing hold=True|False
     washold = ax.ishold()
@@ -1945,8 +1944,7 @@ def boxplot(x, notch=0, sym='b+', vert=1, whis=1.5, positions=None, widths=None,
     if hold is not None:
         ax.hold(hold)
     try:
-        ret = ax.boxplot(x, notch, sym, vert, whis, positions, widths,
-                         patch_artist=patch_artist)
+        ret = ax.boxplot(x, notch, sym, vert, whis, positions, widths, patch_artist, bootstrap)
         draw_if_interactive()
     finally:
         ax.hold(washold)
@@ -2136,7 +2134,7 @@ def hexbin(x, y, C=None, gridsize=100, bins=None, xscale='linear', yscale='linea
 # This function was autogenerated by boilerplate.py.  Do not edit as
 # changes will be lost
 @autogen_docstring(Axes.hist)
-def hist(x, bins=10, range=None, normed=False, weights=None, cumulative=False, bottom=None, histtype='bar', align='mid', orientation='vertical', rwidth=None, log=False, hold=None, **kwargs):
+def hist(x, bins=10, range=None, normed=False, weights=None, cumulative=False, bottom=None, histtype='bar', align='mid', orientation='vertical', rwidth=None, log=False, color=None, label=None, hold=None, **kwargs):
     ax = gca()
     # allow callers to override the hold state by passing hold=True|False
     washold = ax.ishold()
@@ -2144,7 +2142,7 @@ def hist(x, bins=10, range=None, normed=False, weights=None, cumulative=False, b
     if hold is not None:
         ax.hold(hold)
     try:
-        ret = ax.hist(x, bins, range, normed, weights, cumulative, bottom, histtype, align, orientation, rwidth, log, **kwargs)
+        ret = ax.hist(x, bins, range, normed, weights, cumulative, bottom, histtype, align, orientation, rwidth, log, color, label, **kwargs)
         draw_if_interactive()
     finally:
         ax.hold(washold)
@@ -2421,7 +2419,6 @@ def specgram(x, NFFT=256, Fs=2, Fc=0, detrend=mlab.detrend_none, window=mlab.win
     sci(ret[-1])
     return ret
 
-
 # This function was autogenerated by boilerplate.py.  Do not edit as
 # changes will be lost
 @autogen_docstring(Axes.stem)
@@ -2643,8 +2640,16 @@ def ticklabel_format(**kwargs):
 # This function was autogenerated by boilerplate.py.  Do not edit as
 # changes will be lost
 @docstring.copy_dedent(Axes.locator_params)
-def locator_params(axis='both', tight=False, **kwargs):
+def locator_params(axis='both', tight=None, **kwargs):
     ret =  gca().locator_params(axis, tight, **kwargs)
+    draw_if_interactive()
+    return ret
+
+# This function was autogenerated by boilerplate.py.  Do not edit as
+# changes will be lost
+@docstring.copy_dedent(Axes.tick_params)
+def tick_params(axis='both', **kwargs):
+    ret =  gca().tick_params(axis, **kwargs)
     draw_if_interactive()
     return ret
 
@@ -2879,3 +2884,6 @@ def spectral():
     if im is not None:
         im.set_cmap(cm.spectral)
     draw_if_interactive()
+
+
+
